bootstrap / sass  setup + basic html

--- a/index.html
+++ b/index.html
@@ -1,26 +1,146 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="fr">
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Platyplay - Game Design et solution VR</title>
+    <link rel="stylesheet" type="text/css" href="./css/styles.css">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-
-    <title>PlatyPlay</title>
 </head>
 
 <body>
 
-    <h1 class="border border-primary">Hello, world!</h1>
+    <nav class="navbar navbar-expand-lg navbar-light shadow navadditional">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        Hello
+
+    </nav>
+
+    <h1>
+
+        Un studio de Game Design étudiant, spécialisé dans la VR et les dispostifs Haptiques
+
+    </h1>
+
+    <div>
+
+        <h2>Qui sommes nous ?</h2>
+
+        <img src="" alt="">
+
+        <div>
+            PlatyPlay Studio est un studio de Game Design indépendant, d’étudiants en licence professionnelle MIAMI de
+            Tarbes. Nous avons pour objectif de découvrir la réalité virtuelle, augmentée et mixte en apprenant des
+            nouvelles technologies (casques VR, veste haptiques et tout autres nouvelles technologies).
+            <ul>
+                Notre équipe est composée de 5 personnes :
+                <li>
+                    Yoann BOUQUEY : développeur
+                </li>
+
+                <li>
+                    Gurvann MAZIN : audiovisuel
+                </li>
+
+                <li>
+                    Ortiz Gongora Erick : designer
+                </li>
+
+                <li>
+                    Emilie SARTRAND : développeuse
+                </li>
+
+                <li>
+                    Théo BAREILLES : développeur
+                </li>
+            </ul>
+            Nous sommes un groupe de cinq étudiants venant de tout horizon réunis autour de mêmes passions.
+        </div>
+
+    </div>
+
+    <div>
+
+        <h2>Nos projets</h2>
+
+        <img src="" alt="">
+
+        <h3>Collaboration avec Fan4All</h3>
+
+        <div>
+            Dans le cadre de notre projet tutoré, nous travaillons en collaboration avec l’association Fan4All, une
+            association qui souhaite “Donner la possibilité aux pilotes sourds ou présentant des difficultés d’élocution
+            de voler dans les espaces aériens contrôlés” - (https://fans4all.org/).
+            Notre objectif sur ce projet est de voir comment transmettre des informations à des pilotes HSI (hearing and
+            speaking Impaired), pilotes en situation de surdité (quelle soit permanante ou ponctuelle), via un
+            équipement haptique.
+        </div>
+
+    </div>
+
+    <div>
+
+        <h2>Nos compétences </h2>
+
+
+        <div>
+            <img src="" alt="">
+
+            <h3>Polyvalents</h3>
+
+            <div>
+                Comme nous sommes étudiants nous apprenons beaucoup chaque jour, la polyvalence nous décrit donc assez
+                bien. Venant de plusieurs formations différentes nous pouvons dire que nous apprenons les uns des
+                autres.
+            </div>
+        </div>
+
+
+        <div>
+            <img src="" alt="">
+
+            <h3>Investis</h3>
+
+            <div>
+                Nous sommes une équipe de passionnés ce qui nous rend très investis dans notre travail. Nous cherchons à
+                comprendre les nouvelles technologies afin de les utiliser de différentes manières dans le jeux vidéos
+                et autres milieux. </div>
+        </div>
+
+
+        <div>
+            <img src="" alt="">
+
+            <h3>Créatifs</h3>
+
+            <div>
+                Nous travaillons en groupes et confrontons souvent nos idées afin de faire preuve d’une créativité
+                collective. Les idées des uns agrémentes celles des autres.
+            </div>
+        </div>
+    </div>
+
+    <div>
+
+        <h2>Nous contacter</h2>
+
+        <img src="" alt="">
+
+        <h3>mai@mail.mail</h3>
+    </div>
+
+    <footer>
+        Icon by FlatIcon
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
+        integrity="sha384-W8fXfP3gkOKtndU4JGtKDvXbO53Wy8SZCQHczT5FMiiqmQfUpWbYdTil/SxwZgAN"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.min.js"
+        integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
+        crossorigin="anonymous"></script>
+    <!-- <script src="assets/js/popper.min.js"></script> -->
 </body>
 
 </html>
