added fan4all logo

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <h2 class="text-secondary my-5 col-3 font-josefin font-weight-bold border-success border-bottom border-4">
                 Qui sommes nous ?</h2>
             <div class="d-flex my-5">
-                <img class="col-5 img-fluid" src="" alt="Photo de Groupe">
+                <img class="col-5 img-fluid icon" src="" alt="Photo de Groupe">
                 <div class="col-1"></div>
                 <div class="col-6 text-dark">
                     PlatyPlay Studio est un studio de Game Design indépendant, d’étudiants en licence professionnelle
@@ -129,7 +129,7 @@
 
                 <div class="col-1"></div>
 
-                <img class="col-5 my-4" src="" alt="Image d'illustration">
+                <img class="col-5 my-4 img-fluid h-100" src="./img/F4A_Logo_transparentre.png" alt="Image d'illustration">
 
 
 
