--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                         Fan4All, une
                         association qui souhaite “Donner la possibilité aux pilotes sourds ou présentant des difficultés
                         d’élocution
-                        de voler dans les espaces aériens contrôlés” - (https://fans4all.org/).
+                        de voler dans les espaces aériens contrôlés” - (<a href="https://fans4all.org/" target="_blank"> https://fans4all.org/ </a>).
                         Notre objectif sur ce projet est de voir comment transmettre des informations à des pilotes HSI
                         (hearing
                         and
@@ -212,8 +212,8 @@
     </div>
 
 
-    <footer>
-        Icon by FlatIcon
+    <footer class="text-center mt-5 shadow-lg py-5">
+        Icon by <a href="https://www.flaticon.com/" target="_blank"> FlatIcon </a>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"
