--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
 
     <nav id="nav"
-        class="navbar navbar-expand-lg navbar-light bg-light shadow navadditional sticky-top py-5 container-fluid">
+        class="desktop navbar navbar-expand-lg navbar-light bg-light shadow navadditional sticky-top py-5 container-fluid">
 
         <script>let navHeight = document.getElementById('nav').getBoundingClientRect().height</script>
 
@@ -38,6 +38,7 @@
         </div>
 
     </nav>
+
     <div id="home" class="w-100 home">
         <div class="backgroundImg home d-flex  flex-column justify-content-center">
             <img class="logohome" src="./img/logoOriginal.svg" alt="Logo PlatyPlay" />
@@ -54,7 +55,7 @@
         </div>
 
 
-        <div class="row my-5">
+        <div class="desktop row my-5">
 
             <h2 class="text-secondary my-5 col-3 font-josefin font-weight-bold border-success border-bottom border-4">
                 Qui sommes nous ?</h2>
@@ -98,12 +99,56 @@
 
         </div>
 
+        <div hidden="hidden" class="mobile row my-5 px-5">
+
+            <h2
+                class="text-secondary my-5 text-center font-josefin font-weight-bold border-success border-bottom border-4">
+                Qui sommes nous ?</h2>
+            <div class="d-flex my-5 flex-column">
+                <img class="img-fluid icon" src="" alt="Photo de Groupe">
+                <div class="text-dark">
+                    PlatyPlay Studio est un studio de Game Design indépendant, d’étudiants en licence professionnelle
+                    MIAMI
+                    de
+                    Tarbes. Nous avons pour objectif de découvrir la réalité virtuelle, augmentée et mixte en apprenant
+                    des
+                    nouvelles technologies (casques VR, veste haptiques et tout autres nouvelles technologies).<br>
+                    Notre équipe est composée de 5 personnes :
+                    <ul>
+                        <li class="my-3">
+                            Yoann BOUQUEY : développeur
+                        </li>
+
+                        <li class="my-3">
+                            Gurvann MAZIN : audiovisuel
+                        </li>
+
+                        <li class="my-3">
+                            Ortiz Gongora Erick : designer
+                        </li>
+
+                        <li class="my-3">
+                            Emilie SARTRAND : développeuse
+                        </li>
+
+                        <li>
+                            Théo BAREILLES : développeur
+                        </li>
+                    </ul>
+                    Nous sommes un groupe de cinq étudiants venant de tout horizon réunis autour de mêmes passions.
+                </div>
+            </div>
+
+
+
+        </div>
+
         <div id="projects" class="my-5 py-5 ">
             <div class="border-top border-success border-1"></div>
         </div>
 
 
-        <div class="row my-5">
+        <div class="desktop row my-5">
 
             <h2 class="text-secondary my-5 col-2 font-josefin font-weight-bold border-success border-bottom border-4">
                 Nos projets</h2>
@@ -117,7 +162,8 @@
                         Fan4All, une
                         association qui souhaite “Donner la possibilité aux pilotes sourds ou présentant des difficultés
                         d’élocution
-                        de voler dans les espaces aériens contrôlés” - (<a href="https://fans4all.org/" target="_blank"> https://fans4all.org/ </a>).
+                        de voler dans les espaces aériens contrôlés” - (<a href="https://fans4all.org/" target="_blank">
+                            https://fans4all.org/ </a>).
                         Notre objectif sur ce projet est de voir comment transmettre des informations à des pilotes HSI
                         (hearing
                         and
@@ -129,7 +175,45 @@
 
                 <div class="col-1"></div>
 
-                <img class="col-5 my-4 img-fluid h-100" src="./img/F4A_Logo_transparentre.png" alt="Image d'illustration">
+                <img class="col-5 my-4 img-fluid h-100" src="./img/F4A_Logo_transparentre.png"
+                    alt="Image d'illustration">
+
+
+
+            </div>
+
+        </div>
+
+        <div hidden="hidden" class="mobile row my-5 px-5">
+
+            <h2
+                class="text-secondary text-center my-5 font-josefin font-weight-bold border-success border-bottom border-4">
+                Nos projets</h2>
+
+            <div class="my-4 d-flex flex-column">
+                <img class="my-2 img-fluid h-100" src="./img/F4A_Logo_transparentre.png" alt="Image d'illustration">
+
+                <div class=" my-3">
+                    <h3 class=" my-2 text-secondary font-josefin">Collaboration avec Fan4All</h3>
+
+                    <div class="my-5">
+                        Dans le cadre de notre projet tutoré, nous travaillons en collaboration avec l’association
+                        Fan4All, une
+                        association qui souhaite “Donner la possibilité aux pilotes sourds ou présentant des difficultés
+                        d’élocution
+                        de voler dans les espaces aériens contrôlés” - (<a href="https://fans4all.org/" target="_blank">
+                            https://fans4all.org/ </a>).
+                        Notre objectif sur ce projet est de voir comment transmettre des informations à des pilotes HSI
+                        (hearing
+                        and
+                        speaking Impaired), pilotes en situation de surdité (quelle soit permanante ou ponctuelle), via
+                        un
+                        équipement haptique.
+                    </div>
+                </div>
+
+
+
 
 
 
@@ -142,7 +226,7 @@
         </div>
 
 
-        <div class="row">
+        <div class="desktop row ">
 
             <h2 class="my-5 text-secondary col-3 font-josefin font-weight-bold border-success border-bottom border-4">
                 Nos compétences </h2>
@@ -174,7 +258,7 @@
                         cherchons à
                         comprendre les nouvelles technologies afin de les utiliser de différentes manières dans le jeux
                         vidéos
-                        et autres milieux. 
+                        et autres milieux.
                     </div>
 
                 </div>
@@ -195,13 +279,75 @@
 
         </div>
 
+        <div hidden="hidden" class="mobile row px-5">
+
+            <h2
+                class="my-5 text-secondary text-center font-josefin font-weight-bold border-success border-bottom border-4">
+                Nos compétences </h2>
+
+            <div class="d-flex p-4  flex-column ">
+
+                <img class="mt-3 icon justify-content-center" src="./img/couteausuisse.svg" alt="">
+
+                <h3 class="text-secondary text-center font-josefin my-5">Polyvalents</h3>
+
+                <div class="text-dark font-abel">
+                    Comme nous sommes étudiants nous apprenons beaucoup chaque jour, la polyvalence nous décrit donc
+                    assez
+                    bien. Venant de plusieurs formations différentes nous pouvons dire que nous apprenons les uns
+                    des
+                    autres.
+                </div>
+
+
+
+                <img class=" mt-5 icon justify-content-center" src="./img/handshake.svg" alt="">
+
+                <h3 class="text-secondary text-center  my-5 font-josefin">Investis</h3>
+
+                <div class="mb-5 text-dark font-abel">
+                    Nous sommes une équipe de passionnés ce qui nous rend très investis dans notre travail. Nous
+                    cherchons à
+                    comprendre les nouvelles technologies afin de les utiliser de différentes manières dans le jeux
+                    vidéos
+                    et autres milieux.
+                </div>
+
+
+
+                <img class=" mt-3 icon justify-content-center" src="./img/lamp.svg" alt="">
+
+                <h3 class="text-secondary text-center font-josefin  my-5">Créatifs</h3>
+
+                <div class="text-dark font-abel">
+                    Nous travaillons en groupes et confrontons souvent nos idées afin de faire preuve d’une
+                    créativité
+                    collective. Les idées des uns agrémentes celles des autres.
+                </div>
+            </div>
+
+        </div>
+
         <div id="contacts" class="my-5 py-5 ">
             <div class="border-top border-success border-1"></div>
         </div>
 
-        <div class="row">
+        <div class="desktop row">
 
-            <h2 class="my-5 text-secondary col-3 font-josefin font-weight-bold border-success border-bottom border-4">Nous
+            <h2 class="my-5 text-secondary col-3 font-josefin font-weight-bold border-success border-bottom border-4">
+                Nous
+                contacter</h2>
+            <div class="my-5 d-flex justify-content-center">
+                <img class="pr-5 icon-sm" src="./img/email 1.svg" alt="">
+                <h3 class="px-5 text-secondary font-josefin">mai@mail.mail</h3>
+            </div>
+
+        </div>
+
+        <div hidden="hidden" class="mobile row px-5">
+
+            <h2 class="my-5 text-secondary text-center font-josefin font-weight-bold border-success border-bottom border-4">
+                Nous
                 contacter</h2>
             <div class="my-5 d-flex justify-content-center">
                 <img class="pr-5 icon-sm" src="./img/email 1.svg" alt="">
@@ -223,6 +369,8 @@
         integrity="sha384-skAcpIdS7UcVUC05LJ9Dxay8AXcDYfBJqt1CJ85S/CFujBsIzCIv+l9liuYLaMQ/"
         crossorigin="anonymous"></script>
     <script src="./js/scroll.js"></script>
+    <script src="./js/responsive.js"></script>
+
     <!-- <script src="assets/js/popper.min.js"></script> -->
 </body>
 
