--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         </li>
 
                         <li class="my-3">
-                            Ortiz Gongora Erick : designer
+                            Erick ORTIZ GONGORA  : designer
                         </li>
 
                         <li class="my-3">
@@ -124,7 +124,7 @@
                         </li>
 
                         <li class="my-3">
-                            Ortiz Gongora Erick : designer
+                            Erick ORTIZ GONGORA : designer
                         </li>
 
                         <li class="my-3">
