--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2 class="text-secondary my-5 col-3 font-josefin font-weight-bold border-success border-bottom border-4">
                 Qui sommes nous ?</h2>
             <div class="d-flex my-5">
-                <img class="col-5 img-fluid icon" src="" alt="Photo de Groupe">
+                <img class="col-5 img-fluid icon" src="./img/groupphoto.jpg" alt="Photo de Groupe">
                 <div class="col-1"></div>
                 <div class="col-6 text-dark">
                     PlatyPlay Studio est un studio de Game Design indépendant, d’étudiants en licence professionnelle
@@ -105,7 +105,7 @@
                 class="text-secondary my-5 text-center font-josefin font-weight-bold border-success border-bottom border-4">
                 Qui sommes nous ?</h2>
             <div class="d-flex my-5 flex-column">
-                <img class="img-fluid icon" src="" alt="Photo de Groupe">
+                <img class="img-fluid icon" src="./img/groupphoto.jpg" alt="Photo de Groupe">
                 <div class="text-dark">
                     PlatyPlay Studio est un studio de Game Design indépendant, d’étudiants en licence professionnelle
                     MIAMI
